crates/proptest-macros/tests/ui/recursion_limit_zero.stderr
error: `recursion_limit` must be at least 1
 --> tests/ui/recursion_limit_zero.rs:3:30
  |
3 | #[proptest(recursion_limit = 0)]
  |                              ^
